Mejora en permisos y roles